--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -23,7 +23,7 @@
 %\captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
 
 \title{Mid-term Presentation}
-\author{Samy Dafir, András Czuczi, Andreas Lindlbauer}
+\author{Samy Dafir, András Czuczi, Andreas Lindlbauer} %#nohomo
 \date{}
 \begin{document}
 
