added sota preview / examples

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -15,8 +15,8 @@
 \addbibresource{content/cites.bib}
 %\bibliography{content/cites.bib}
 \usepackage{textcomp}
-\usepackage{fontspec}
-\setsansfont{Fira Sans}
+%\usepackage{fontspec}
+%\setsansfont{Fira Sans}
 \usepackage{hyperref}
 \renewcommand*{\bibfont}{\scriptsize}
 %\usepackage{caption}
@@ -74,11 +74,80 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Stuff}
+\begin{frame}{SOTA Findings}
+	\metroset{block=fill}
+	\begin{block}{Main Developments}
 	\begin{itemize}
-        \pause{}
-		\item More Stuff
+		\item Simplification and Optimisation
+		\item Comfort
+		\item Privacy
+		\item Health
+		\item Dynamic Living Spaces
+		\item Implicit Interactions
 	\end{itemize}	
+	\end{block}
+\end{frame}
+
+
+\begin{frame}{SOTA Findings}
+	\metroset{block=fill}
+	\begin{block}{Main idea behind the smart home}
+		\begin{itemize}
+		\item Make everyday life easier, more efficient, comfortable.
+		\item Use technology to make our lives healthier.
+		\item Adapt to shrinking living space
+		\item Use technology for everything, but keep privacy
+		\end{itemize}
+	\end{block}
+
+	\begin{exampleblock}{Additional Developments}
+	\begin{itemize}
+		\item Implicit interactions: Interacting without actually interacting
+	\end{itemize}
+\end{exampleblock}
+	
+\end{frame}
+
+
+\section{Examples / Projects}
+
+
+\begin{frame}{RAM House}
+	\textbf{Dynamic Privacy}\\
+	\vspace{3mm}
+	\includegraphics[width=0.7\textwidth]{images/1.jpg}
+\end{frame}
+
+\begin{frame}{Numi Toilet}
+	\textbf{Comfort and Implicit Interaction}\\
+	\vspace{3mm}
+	\includegraphics[width=\textwidth]{images/3.jpg}
+\end{frame}
+
+\begin{frame}{Numi Toilet}
+\includegraphics[width=\textwidth]{images/6.jpg}
+\end{frame}
+
+\begin{frame}{MIT CitiHome Project}
+	\textbf{Dynamic Living Space}\\
+	\vspace{3mm}
+	\includegraphics[width=\textwidth]{images/4.jpg}
+\end{frame}
+
+\begin{frame}{MIT CitiHome Project}
+\includegraphics[width=\textwidth]{images/5.jpg}
+\end{frame}
+
+\begin{frame}{Infrascan Smart Toilet}
+	\textbf{Health and Implicit Interaction}\\
+	\vspace{3mm}
+	\includegraphics[width=\textwidth]{images/2.jpg}
+\end{frame}
+
+\begin{frame}{Intellithings RoomMe}
+	\textbf{Simplification, Comfort, Implicit Interaction}\\
+	\vspace{3mm}
+	\includegraphics[width=\textwidth]{images/1.png}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
