Enhanced Lit Rev

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -57,15 +57,62 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Main Themes}
+	\metroset{block=fill}
+	\begin{block}{Focus of space and architecture in interfaces}
 	\begin{itemize}
-		\item Space and architecture in interfaces
         \pause{}
-		\item Make buildings more interactive and adaptable to human needs
+		\item Interaction with space instead of stuff
         \pause{}
-		\item Feedback loop between human behavior and architecture
+		\item Media fa\c{c}ades
         \pause{}
-		\item Connections between interaction design, technology and architecture
+		\item Architectural and spatial metaphors in interfaces
+    \end{itemize}	
+	\end{block}
+
+    \pause{}
+	\metroset{block=fill}
+	\begin{block}{Make buildings more interactive and adaptable to human needs}
+	\begin{itemize}
+        \pause{}
+		\item More interactive capabilities have impact
+        \pause{}
+		\item ``Responsive Places'' change according to occupants needs
+        \pause{}
+        \item Enhance connectivity to smart devices
+        \pause{}
+        \item Buildings and their use change over time, allow better appropriation and renovation
 	\end{itemize}	
+	\end{block}
+\end{frame}
+
+
+
+
+\begin{frame}{Main Themes}
+	\metroset{block=fill}
+	\begin{block}{Feedback loop between human behavior and architecture}
+	\begin{itemize}
+        \pause{}
+		\item Focus on feedback loop between humans and buildings
+        \pause{}
+		\item Relate movement of people to movement in architecture
+	\end{itemize}	
+	\end{block}
+
+    \pause{}
+	\metroset{block=fill}
+	\begin{block}{Connections between interaction design, technology and architecture}
+	\begin{itemize}
+        \pause{}
+		\item Technology for architecture
+        \pause{}
+		\item Technology embedded in architecture
+        \pause{}
+		\item Architectonic technology
+        \pause{}
+        \item Architectonic interaction design
+	\end{itemize}	
+	\end{block}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
