--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -56,7 +56,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Main Themes}
+\begin{frame}{Intersection of architecture and interaction design}
 	\metroset{block=fill}
 	\begin{block}{Focus of space and architecture in interfaces}
 	\begin{itemize}
@@ -67,36 +67,6 @@
         \pause{}
 		\item Architectural and spatial metaphors in interfaces
     \end{itemize}	
-	\end{block}
-
-    \pause{}
-	\metroset{block=fill}
-	\begin{block}{Make buildings more interactive and adaptable to human needs}
-	\begin{itemize}
-        \pause{}
-		\item More interactive capabilities have impact
-        \pause{}
-		\item ``Responsive Places'' change according to occupants needs
-        \pause{}
-        \item Enhance connectivity to smart devices
-        \pause{}
-        \item Buildings and their use change over time, allow better appropriation and renovation
-	\end{itemize}	
-	\end{block}
-\end{frame}
-
-
-
-
-\begin{frame}{Main Themes}
-	\metroset{block=fill}
-	\begin{block}{Feedback loop between human behavior and architecture}
-	\begin{itemize}
-        \pause{}
-		\item Focus on feedback loop between humans and buildings
-        \pause{}
-		\item Relate movement of people to movement in architecture
-	\end{itemize}	
 	\end{block}
 
     \pause{}
@@ -113,6 +83,35 @@
         \item Architectonic interaction design
 	\end{itemize}	
 	\end{block}
+\end{frame}
+
+
+\begin{frame}{Adaptable architecture and feedback loops}
+	\metroset{block=fill}
+	\begin{block}{Make buildings more interactive and adaptable to human needs}
+	\begin{itemize}
+        \pause{}
+		\item More interactive capabilities have impact
+        \pause{}
+		\item ``Responsive Places'' change according to occupants needs
+        \pause{}
+        \item Enhance connectivity to smart devices
+        \pause{}
+        \item Buildings and their use change over time, allow better appropriation and renovation
+	\end{itemize}	
+	\end{block}
+
+    \pause{}
+	\metroset{block=fill}
+	\begin{block}{Feedback loop between human behavior and architecture}
+	\begin{itemize}
+        \pause{}
+		\item Focus on feedback loop between humans and buildings
+        \pause{}
+		\item Relate movement of people to movement in architecture
+	\end{itemize}	
+	\end{block}
+
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
