added summary and slides for questions

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -43,15 +43,37 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Stuff}
+\begin{frame}{Human Building Interaction by Selena Savić I.} %%maybe not displayed
 	\begin{itemize}
         \pause{}
-		\item More Stuff
+		\item Human Building Interaction (HBI) focuses on resources and therefore on budgeting
+		\pause{}
+		\item Goal is to end the talk about whether resources are (in)finite
+		\pause{}
+		\item Scarcity of resources (whether artificial or not) has an impact on the design
+		\pause{}
+		\item Just because something is not scarce, no overusage is recommended (eg. WiFi and routers)
 	\end{itemize}	
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Human Building Interaction by Selena Savić II.} %% ``ć`` maybe not displayed
+	\begin{itemize}
+        \pause{}
+		\item Computation has an impact on design of buildings -> smart buildings
+		\pause{}
+		\item Intelligent walls: optimize bandwith usage
+		\pause{}
+		\item RAM house: a prototype partially made of Radar Absolvent Material -> airplane mode for your house
+		\pause{}
+		\item Smart home: home expects user to do something (eg. use less energy at given time)
+		\pause{}
+		\item 
+	\end{itemize}	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Main findings from literature review}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -202,18 +224,72 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Stuff}
+\begin{frame}{Experts}
 	\begin{itemize}
         \pause{}
-		\item More Stuff
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
 	\end{itemize}	
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
+
+\begin{frame}{Questions I.}
+	\begin{itemize}
+        \pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+	\end{itemize}	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Questions II.}
+	\begin{itemize}
+        \pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+	\end{itemize}	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Questions III.}
+	\begin{itemize}
+        \pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+		\pause{}
+		\item
+	\end{itemize}	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%{\footnotesize \printbibliography}
   
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
