Changed Lit Review + Gif (only animated in acroread)

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -18,6 +18,7 @@
 %\usepackage{fontspec}
 %\setsansfont{Fira Sans}
 \usepackage{hyperref}
+\usepackage{animate}
 \renewcommand*{\bibfont}{\scriptsize}
 %\usepackage{caption}
 %\captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
@@ -48,7 +49,7 @@
         \pause{}
 		\item Human Building Interaction (HBI) focuses on resources and therefore on budgeting
 		\pause{}
-		\item Goal is to end the talk about whether resources are (in)finite
+		\item Goal is to end the talk about whether resources are (in) finite
 		\pause{}
 		\item Scarcity of resources (whether artificial or not) has an impact on the design
 		\pause{}
@@ -67,9 +68,9 @@
 		\pause{}
 		\item RAM house: a prototype partially made of Radar Absolvent Material -> airplane mode for your house
 		\pause{}
-		\item Smart home: home expects user to do something (eg. use less energy at given time)
-		\pause{}
-		\item 
+		\item Smart home: home expects user to do something (eg.\ use less energy at given time)
+		% \pause{}
+		% \item %% TODO Empty item
 	\end{itemize}	
 \end{frame}
 
@@ -78,59 +79,46 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Intersection of architecture and interaction design}
+\begin{frame}{Main findings from literature review I.}
 	\metroset{block=fill}
-	\begin{block}{Focus of space and architecture in interfaces}
+	\begin{block}{Intersection of architecture and interaction design}
 	\begin{itemize}
         \pause{}
 		\item Interaction with space instead of stuff
         \pause{}
-		\item Media fa\c{c}ades
-        \pause{}
 		\item Architectural and spatial metaphors in interfaces
-    \end{itemize}	
-	\end{block}
-
-    \pause{}
-	\metroset{block=fill}
-	\begin{block}{Connections between interaction design, technology and architecture}
-	\begin{itemize}
         \pause{}
-		\item Technology for architecture
+        \item Technology and architecture (CAD and embedded systems)
         \pause{}
-		\item Technology embedded in architecture
-        \pause{}
-		\item Architectonic technology
-        \pause{}
-        \item Architectonic interaction design
+        \item Architectonic technology (e.g\ Media fa\c{c}ades)
+        %\pause{}
+        %\item Architectonic interaction design
 	\end{itemize}	
 	\end{block}
 \end{frame}
 
+\begin{frame}{Main findings from literature review I.}
+    \begin{figure}
+    \centering
+    \animategraphics[width=300,loop,autoplay]{12}{images/frame-}{0}{19}
+    \end{figure}
+\end{frame}
 
-\begin{frame}{Adaptable architecture and feedback loops}
+
+\begin{frame}{Main findings from literature review II.}
 	\metroset{block=fill}
-	\begin{block}{Make buildings more interactive and adaptable to human needs}
+	\begin{block}{Adaptable architecture and feedback loops}
 	\begin{itemize}
         \pause{}
-		\item More interactive capabilities have impact
+		\item More interactive capabilities that have impact
         \pause{}
 		\item ``Responsive Places'' change according to occupants needs
         \pause{}
-        \item Enhance connectivity to smart devices
-        \pause{}
         \item Buildings and their use change over time, allow better appropriation and renovation
-	\end{itemize}	
-	\end{block}
-
-    \pause{}
-	\metroset{block=fill}
-	\begin{block}{Feedback loop between human behavior and architecture}
-	\begin{itemize}
         \pause{}
 		\item Focus on feedback loop between humans and buildings
-        \pause{}
-		\item Relate movement of people to movement in architecture
+        %\pause{}
+		%\item Relate movement of people to movement in architecture
 	\end{itemize}	
 	\end{block}
 
