--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -24,7 +24,7 @@
 %\captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
 
 \title{Mid-term Presentation}
-\author{Samy Dafir, András Czuczi, Andreas Lindlbauer} %#nohomo
+\author{András Czuczi, Samy Dafir, Andreas Lindlbauer} %#nohomo
 \date{}
 \begin{document}
 
