--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -44,7 +44,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Human Building Interaction by Selena Savić I.} %%maybe not displayed
+\begin{frame}{Human Building Interaction by Selena Savić I.} 
 	\begin{itemize}
         \pause{}
 		\item Human Building Interaction (HBI) focuses on resources and therefore on budgeting
@@ -59,7 +59,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Human Building Interaction by Selena Savić II.} %% ``ć`` maybe not displayed
+\begin{frame}{Human Building Interaction by Selena Savić II.}
 	\begin{itemize}
         \pause{}
 		\item Computation has an impact on design of buildings -> smart buildings
@@ -69,8 +69,6 @@
 		\item RAM house: a prototype partially made of Radar Absolvent Material -> airplane mode for your house
 		\pause{}
 		\item Smart home: home expects user to do something (eg.\ use less energy at given time)
-		% \pause{}
-		% \item %% TODO Empty item
 	\end{itemize}	
 \end{frame}
 
@@ -215,11 +213,11 @@
 \begin{frame}{Experts}
 	\begin{itemize}
         \pause{}
-		\item
+		\item Mikael Wiberg Professor of Informatics, Umeå University, Sweden
 		\pause{}
-		\item
+		\item Holger Schnädelbach Senior Researcher in the Mixed Reality Lab (MRL), University of Nottingham, GB
 		\pause{}
-		\item
+		\item Hamed Alavi Senior Researcher in Human-IST Institute, University of Fribourg, Switzerland
 	\end{itemize}	
 \end{frame}
 
@@ -228,15 +226,15 @@
 \begin{frame}{Questions I.}
 	\begin{itemize}
         \pause{}
-		\item
+		\item How would you define HBI? What is its relation to HCI and vice-versa?
 		\pause{}
-		\item
+		\item What made you an expert on HBI? What important moments lead you to the decision that you shall become one?
 		\pause{}
-		\item
+		\item Are there HBI-realted projects you are currently working on? Do you plan any? If yes, please elaborate.
 		\pause{}
-		\item
+		\item What was/were the most excited project(s) you took part in?
 		\pause{}
-		\item
+		\item What are good and bad examples of HBI? Ones you personally had experience with?
 	\end{itemize}	
 \end{frame}
 
@@ -245,15 +243,15 @@
 \begin{frame}{Questions II.}
 	\begin{itemize}
         \pause{}
-		\item
+		\item Is HBI roughly the same around the world? Or are there any significant differences?
 		\pause{}
-		\item
+		\item When it comes to inventions, many times fiction makes it into reality. Is this the case in HBI, too? Think about literature, films, art and gaming.
 		\pause{}
-		\item
+		\item What part do computers play in HBI? Can you imagine that they will become irreplaceable in HBI? Or are they already?
 		\pause{}
-		\item
+		\item What development do you expect for the near future (~10 years)? And in the next ~50 years?
 		\pause{}
-		\item
+		\item How could have you used your knowledge about HBI from nowadays for example in mediaval times? Eg. on a simple home and on a castle.
 	\end{itemize}	
 \end{frame}
 
@@ -262,15 +260,15 @@
 \begin{frame}{Questions III.}
 	\begin{itemize}
         \pause{}
-		\item
+		\item Imagine the idea of constructing a hotel full of rooms which (almost futuristically) adapt to their guests and their mood (like the mood ring or music playing based on mood, etc). Is such thing possible? If yes, how?
 		\pause{}
-		\item
+		\item How can HBI used in semi-buildings (eg. boat, camper van)? Or in non-buildings (eg. public transportation vehicles, parks)?
 		\pause{}
-		\item
+		\item Are there any drawbacks of HBI? Can one live better without it?
 		\pause{}
-		\item
+		\item What do you think of feng-shui?
 		\pause{}
-		\item
+		\item Do you support the idea of smart homes?
 	\end{itemize}	
 \end{frame}
 
