--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -89,8 +89,6 @@
         \item Technology and architecture (CAD and embedded systems)
         \pause{}
         \item Architectonic technology (e.g\ Media fa\c{c}ades)
-        %\pause{}
-        %\item Architectonic interaction design
 	\end{itemize}	
 	\end{block}
 \end{frame}
@@ -98,7 +96,8 @@
 \begin{frame}{Main findings from literature review I.}
     \begin{figure}
     \centering
-    \animategraphics[width=300,loop,autoplay]{12}{images/frame-}{0}{19}
+    \animategraphics[width=300pt,loop,autoplay]{12}{images/frame-}{0}{19}
+    \caption{Puzzle Facade by Javier Lloret}
     \end{figure}
 \end{frame}
 
@@ -115,8 +114,6 @@
         \item Buildings and their use change over time, allow better appropriation and renovation
         \pause{}
 		\item Focus on feedback loop between humans and buildings
-        %\pause{}
-		%\item Relate movement of people to movement in architecture
 	\end{itemize}	
 	\end{block}
 
