image sources + new image

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -144,9 +144,7 @@
 	\metroset{block=fill}
 	\begin{block}{Main idea behind the smart home}
 		\begin{itemize}
-		\item Make everyday life easier, more efficient, comfortable.
-		\item Use technology to make our lives healthier.
-		\item Adapt to shrinking living space
+		\item Make everyday life easier, more efficient, comfortable and healthier.
 		\item Use technology for everything, but keep privacy
 		\end{itemize}
 	\end{block}
@@ -154,6 +152,7 @@
 	\begin{exampleblock}{Additional Developments}
 	\begin{itemize}
 		\item Implicit interactions: Interacting without actually interacting
+		\item Adapt to shrinking living space
 	\end{itemize}
 \end{exampleblock}
 	
@@ -166,39 +165,60 @@
 \begin{frame}{RAM House}
 	\textbf{Dynamic Privacy}\\
 	\vspace{3mm}
+	\begin{figure}[H]
 	\includegraphics[width=0.7\textwidth]{images/1.jpg}
+	\caption{http://www.spacecaviar.net/ram-house/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Numi Toilet}
 	\textbf{Comfort and Implicit Interaction}\\
 	\vspace{3mm}
+	\begin{figure}[H]
 	\includegraphics[width=\textwidth]{images/3.jpg}
+	\caption{http://www.kohler.com/numi/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Numi Toilet}
-\includegraphics[width=\textwidth]{images/6.jpg}
+	\begin{figure}[H]
+	\includegraphics[width=\textwidth]{images/6.jpg}
+	\caption{http://www.kohler.com/numi/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{MIT CitiHome Project}
 	\textbf{Dynamic Living Space}\\
 	\vspace{3mm}
+	\begin{figure}[H]
 	\includegraphics[width=\textwidth]{images/4.jpg}
+	\caption{https://www.media.mit.edu/projects/OLD\_cityhome2/overview/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{MIT CitiHome Project}
-\includegraphics[width=\textwidth]{images/5.jpg}
+	\begin{figure}[H]
+	\includegraphics[width=\textwidth]{images/5.jpg}
+	\caption{https://www.media.mit.edu/projects/OLD\_cityhome2/overview/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Infrascan Smart Toilet}
 	\textbf{Health and Implicit Interaction}\\
 	\vspace{3mm}
-	\includegraphics[width=\textwidth]{images/2.jpg}
+	\begin{figure}[H]
+	\includegraphics[width=0.8\textwidth]{images/7.png}
+	\caption{https://www.jamesdysonaward.org/2018/project/infrascan-smart-toilet/}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Intellithings RoomMe}
 	\textbf{Simplification, Comfort, Implicit Interaction}\\
 	\vspace{3mm}
-	\includegraphics[width=\textwidth]{images/1.png}
+	\begin{figure}[H]
+	\includegraphics[width=0.9\textwidth]{images/1.png}
+	\caption{https://www.intellithings.net}
+	\end{figure}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
