Small fixes in format

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -73,6 +73,7 @@
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Main findings from literature review}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -93,7 +94,9 @@
 	\end{block}
 \end{frame}
 
-\begin{frame}{Main findings from literature review I.}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Main findings from literature review II.}
     \begin{figure}
     \centering
     \animategraphics[width=300pt,loop,autoplay]{12}{images/frame-}{0}{19}
@@ -101,8 +104,9 @@
     \end{figure}
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Main findings from literature review II.}
+\begin{frame}{Main findings from literature review III.}
 	\metroset{block=fill}
 	\begin{block}{Adaptable architecture and feedback loops}
 	\begin{itemize}
@@ -243,15 +247,15 @@
 \begin{frame}{Questions I.}
 	\begin{itemize}
         \pause{}
-		\item How would you define HBI? What is its relation to HCI and vice-versa?
+		\item How would you define HBI\@? What is its relation to HCI and vice-versa?
 		\pause{}
-		\item What made you an expert on HBI? What important moments lead you to the decision that you shall become one?
+		\item What made you an expert on HBI\@? What important moments lead you to the decision that you shall become one?
 		\pause{}
 		\item Are there HBI-realted projects you are currently working on? Do you plan any? If yes, please elaborate.
 		\pause{}
-		\item What was/were the most excited project(s) you took part in?
+		\item What was/were the most excited project (s) you took part in?
 		\pause{}
-		\item What are good and bad examples of HBI? Ones you personally had experience with?
+		\item What are good and bad examples of HBI\@? Ones you personally had experience with?
 	\end{itemize}	
 \end{frame}
 
@@ -264,11 +268,11 @@
 		\pause{}
 		\item When it comes to inventions, many times fiction makes it into reality. Is this the case in HBI, too? Think about literature, films, art and gaming.
 		\pause{}
-		\item What part do computers play in HBI? Can you imagine that they will become irreplaceable in HBI? Or are they already?
+		\item What part do computers play in HBI\@? Can you imagine that they will become irreplaceable in HBI\@? Or are they already?
 		\pause{}
-		\item What development do you expect for the near future (~10 years)? And in the next ~50 years?
+		\item What development do you expect for the near future (\~{}10 years)? And in the next \~{}50 years?
 		\pause{}
-		\item How could have you used your knowledge about HBI from nowadays for example in mediaval times? Eg. on a simple home and on a castle.
+    \item How could have you used your knowledge about HBI from nowadays for example in mediaval times? E.g.\ on a simple home and on a castle.
 	\end{itemize}	
 \end{frame}
 
@@ -279,9 +283,9 @@
         \pause{}
 		\item Imagine the idea of constructing a hotel full of rooms which (almost futuristically) adapt to their guests and their mood (like the mood ring or music playing based on mood, etc). Is such thing possible? If yes, how?
 		\pause{}
-		\item How can HBI used in semi-buildings (eg. boat, camper van)? Or in non-buildings (eg. public transportation vehicles, parks)?
+    \item How can HBI used in semi-buildings (e.g.\ boat, camper van)? Or in non-buildings (e.g.\ public transportation vehicles, parks)?
 		\pause{}
-		\item Are there any drawbacks of HBI? Can one live better without it?
+		\item Are there any drawbacks of HBI\@? Can one live better without it?
 		\pause{}
 		\item What do you think of feng-shui?
 		\pause{}
