--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -247,13 +247,13 @@
 \begin{frame}{Questions I.}
 	\begin{itemize}
         \pause{}
-		\item How would you define HBI\@? What is its relation to HCI and vice-versa?
+		\item How would you define HBI\@? Would you like to change anything about HBI\@?
 		\pause{}
-		\item What made you an expert on HBI\@? What important moments lead you to the decision that you shall become one?
+		\item What is its relation to HCI and vice-versa?
 		\pause{}
-		\item Are there HBI-realted projects you are currently working on? Do you plan any? If yes, please elaborate.
+		\item Are there HBI-realted projects you are currently working on? Do you plan any? If yes, please elaborate. 
 		\pause{}
-		\item What was/were the most excited project (s) you took part in?
+		\item What was/were the most excited project(s) you took part in?
 		\pause{}
 		\item What are good and bad examples of HBI\@? Ones you personally had experience with?
 	\end{itemize}	
@@ -266,13 +266,13 @@
         \pause{}
 		\item Is HBI roughly the same around the world? Or are there any significant differences?
 		\pause{}
-		\item When it comes to inventions, many times fiction makes it into reality. Is this the case in HBI, too? Think about literature, films, art and gaming.
+		\item How can HBI used in semi-buildings (eg. boat, camper van)? Or in non-buildings (eg. public transportation vehicles, parks)?
 		\pause{}
-		\item What part do computers play in HBI\@? Can you imagine that they will become irreplaceable in HBI\@? Or are they already?
+		\item What do you think about feng-shui?
 		\pause{}
-		\item What development do you expect for the near future (\~{}10 years)? And in the next \~{}50 years?
+		\item Do you support the idea of smart homes? Why (not)?
 		\pause{}
-    \item How could have you used your knowledge about HBI from nowadays for example in mediaval times? E.g.\ on a simple home and on a castle.
+    \item When it comes to inventions, many times fiction makes it into reality. Is this the case in HBI, too? Think about literature, films, art and gaming.
 	\end{itemize}	
 \end{frame}
 
@@ -281,15 +281,13 @@
 \begin{frame}{Questions III.}
 	\begin{itemize}
         \pause{}
+		\item What kind of interactive architecture design element would you like to see in [town of his university] (even aside reality)?
+		\pause{}
+    \item How could have you used your knowledge about HBI from nowadays for example in mediaval times? Eg. on a simple home and on a castle.
+		\pause{}
 		\item Imagine the idea of constructing a hotel full of rooms which (almost futuristically) adapt to their guests and their mood (like the mood ring or music playing based on mood, etc). Is such thing possible? If yes, how?
 		\pause{}
-    \item How can HBI used in semi-buildings (e.g.\ boat, camper van)? Or in non-buildings (e.g.\ public transportation vehicles, parks)?
-		\pause{}
-		\item Are there any drawbacks of HBI\@? Can one live better without it?
-		\pause{}
-		\item What do you think of feng-shui?
-		\pause{}
-		\item Do you support the idea of smart homes?
+		\item What development do you expect for the near future (\~{}10 years)? And in the next \~{}50 years?
 	\end{itemize}	
 \end{frame}
 
