smaller image captions

--- a/SfCS_presentation.tex
+++ b/SfCS_presentation.tex
@@ -196,7 +196,7 @@
 	\vspace{3mm}
 	\begin{figure}[H]
 	\includegraphics[width=\textwidth]{images/4.jpg}
-	\caption{https://www.media.mit.edu/projects/OLD\_cityhome2/overview/}
+	\small\caption{https://www.media.mit.edu/projects/OLD\_cityhome2/overview/}
 	\end{figure}
 \end{frame}
 
@@ -212,7 +212,7 @@
 	\vspace{3mm}
 	\begin{figure}[H]
 	\includegraphics[width=0.8\textwidth]{images/7.png}
-	\caption{https://www.jamesdysonaward.org/2018/project/infrascan-smart-toilet/}
+	\small\caption{https://www.jamesdysonaward.org/2018/project/infrascan-smart-toilet/}
 	\end{figure}
 \end{frame}
 
