Added slides for lit review

--- a/secondPres/SfCS_presentation.tex
+++ b/secondPres/SfCS_presentation.tex
@@ -5,7 +5,7 @@
 \usepackage[scale=2]{ccicons}
 % \usepackage[ngerman]{babel}
 \usepackage{graphicx} 
-% \graphicspath{ {images/}  {../images/} }
+\graphicspath{{images/}{../images/}}
 \usepackage{tikz} 
 \usepackage{wrapfig}
 %\usepackage[utf8]{inputenc}
@@ -26,6 +26,8 @@
 \title{Final Presentation}
 \author{András Czuczi, Samy Dafir, Andreas Lindlbauer} %#nohomo
 \date{}
+\usebackgroundtemplate
+
 \begin{document}
 
 \begin{frame}
@@ -53,6 +55,33 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+{
+    \usebackgroundtemplate{\includegraphics[width=\paperwidth]{interarch.jpg}}
+\begin{frame}{Intersection of architecture and interaction design}
+%    \includegraphics[width=\paperwidth,height=\paperheight]{interarch.jpg}%
+%	\begin{block}{Intersection of architecture and interaction design}
+\end{frame}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+{
+    \usebackgroundtemplate{\includegraphics[width=\paperwidth,height=\paperheight]{exobuilding.jpg}}
+\begin{frame}{Adaptable architecture and feedback loops}
+%    \includegraphics[width=\paperwidth,height=\paperheight]{interarch.jpg}%
+%	\begin{block}{Intersection of architecture and interaction design}
+\end{frame}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+{
+    \usebackgroundtemplate{\centering \includegraphics[width=\paperwidth,height=\paperheight]{smartbuilding.jpg}}
+\begin{frame}{Improving communication between humans and buildings}
+%    \includegraphics[width=\paperwidth,height=\paperheight]{interarch.jpg}%
+%	\begin{block}{Intersection of architecture and interaction design}
+\end{frame}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
