added some sota stuff

--- a/secondPres/SfCS_presentation.tex
+++ b/secondPres/SfCS_presentation.tex
@@ -108,10 +108,44 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+{
+	\usebackgroundtemplate{\centering \includegraphics[width=\paperwidth,height=\paperheight]{images/cityhome/3.png}}
+	\begin{frame}{Dynamic Livingspaces}
+	
+\end{frame}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+{
+\usebackgroundtemplate{\centering \includegraphics[width=\paperwidth,height=\paperheight]{images/numi/1.jpg}}
+\begin{frame}{Improve Comfort and Health}
+
+\end{frame}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Implicit Interactions}
+	\includegraphics[width=\textwidth]{images/roomme/6.jpg}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+{
+	\usebackgroundtemplate{\centering \includegraphics[width=\paperwidth]{images/ram-house/1.jpg}}
+\begin{frame}{Privacy}
+\end{frame}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Privacy}
+	\vspace{-4mm}
+	\includegraphics[width=\textwidth]{images/roomme/3.png}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction of expert and interview}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
