Fixed András name, added Lit rev and logbook

--- a/secondPres/SfCS_presentation.tex
+++ b/secondPres/SfCS_presentation.tex
@@ -28,7 +28,7 @@
 %\captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
 
 \title{Final Presentation}
-\author{András Czuczi, Samy Dafir, Andreas Lindlbauer} %#nohomo
+\author{Andr\'{a}s Czuczi, Samy Dafir, Andreas Lindlbauer} %#nohomo
 \date{}
 \usebackgroundtemplate
 
