mein Teil #nohomo

--- a/secondPres/SfCS_presentation.tex
+++ b/secondPres/SfCS_presentation.tex
@@ -147,6 +147,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction of expert and interview}
+\begin{frame}{Holger Schnädelbach}
+    \includegraphics[width=\textwidth]{images/hoigi.jpg}
+    \source{https://www.youtube.com/watch?v=p0BHUpTyDxU}
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -155,6 +159,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Findings of interview}
+\begin{frame}{Findings}
+    \includegraphics[width=\textwidth]{images/interview.jpg}
+    \source{http://picpedia.org/highway-signs/i/interview.html}
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
