Added combined file plus pres update

--- a/secondPres/SfCS_presentation.tex
+++ b/secondPres/SfCS_presentation.tex
@@ -146,11 +146,16 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Introduction of expert and interview}
+
+{
+\usebackgroundtemplate{\centering \includegraphics[width=\paperwidth,height=\paperheight]{images/hoigi.jpg}}
 \begin{frame}{Holger Schnädelbach}
-    \includegraphics[width=\textwidth]{images/hoigi.jpg}
-    \source{https://www.youtube.com/watch?v=p0BHUpTyDxU}
+    %%\includegraphics[width=\textwidth]{images/hoigi.jpg}
+    \source{\href{https://www.youtube.com/watch?v=p0BHUpTyDxU}{Holger Schnädelbach}}
 \end{frame}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -159,11 +164,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Findings of interview}
-\begin{frame}{Findings}
-    \includegraphics[width=\textwidth]{images/interview.jpg}
-    \source{http://picpedia.org/highway-signs/i/interview.html}
-\end{frame}
 
+{
+\usebackgroundtemplate{\centering \includegraphics[width=\paperwidth,height=\paperheight]{images/interview.jpg}}
+\begin{frame}{Findings}
+    %%\includegraphics[width=\textwidth]{images/interview.jpg}
+    \source{\href{http://picpedia.org/highway-signs/i/interview.html}{Picpedia}}
+\end{frame}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
